--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -30,8 +30,8 @@
 
     <table>
         <tr>
-            <th>isDone?</th>
-            <th>description</th>
+            <th>isDone</th>
+            <th>Description</th>
             <th></th>
             <th></th>
         </tr>
